film-web-be-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: film-web-be-deployment
  labels:
    app: film-web-be
spec:
  selector:
    matchLabels:
      app: film-web-be
  replicas: 1
  template:
    metadata:
      labels:
        app: film-web-be
    spec:
      containers:
      - name: film-web-be
        image: mcguinnessa/film-web-be:latest
        imagePullPolicy: "Always"
        ports:
        - containerPort: 3000
