home-filmdb-dal-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-filmdb-dal-deployment
  labels:
    app: home-filmdb-dal
spec:
  selector:
    matchLabels:
      app: home-filmdb-dal
  replicas: 1
  template:
    metadata:
      labels:
        app: home-filmdb-dal
    spec:
      containers:
      - name: home-filmdb-dal
        image: mcguinnessa/home-filmdb-dal:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
