mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  labels:
    app: home-mongodb
spec:
  selector:
    matchLabels:
      app: home-mongodb
  replicas: 1
  template:
    metadata:
      labels:
        app: home-mongodb
    spec:
      containers:
      - name: home-mongodb
        image: mongo:4.4.0
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: "mongo-data-dir"
          mountPath: "/data/db"
        ports:
        - containerPort: 27017
      volumes:
      - name: "mongo-data-dir"
        persistentVolumeClaim:
          claimName: "pv-claim"
