web-front-page-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-front-page-service
spec:
  type: NodePort
  selector:
     app: web-front-page
  ports:
    - protocol: TCP
      nodePort: 30168
      port: 3500
      targetPort: 3500
