wifi-led-control-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wifi-led-control-server-service
spec:
  type: NodePort
  selector:
     app: wifi-led-control-server
  ports:
    - protocol: TCP
      nodePort: 30167
      port: 4000
      targetPort: 4000
