metallb-ingress-hosts.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloworld-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: helloworld.local
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: helloworld
              port:
                number: 80
  - host: leds.local
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: wifi-led-control-server-service
              port:
                number: 4000
